--- a/yakumo.yml
+++ b/yakumo.yml
@@ -1,4 +1,5 @@
-- name: yakumo
+- id: o88k6y
+  name: yakumo
   config:
     pipeline:
       build:
@@ -7,6 +8,13 @@
         - client
       clean:
         - tsc --clean
-- name: yakumo-esbuild
-- name: yakumo-tsc
-- name: '@koishijs/client/lib'
+- id: 7qd2c8
+  name: yakumo-esbuild
+- id: 6ydgpo
+  name: yakumo-tsc
+- id: ubsuvo
+  name: '@koishijs/client/lib'
+- id: t7yap8
+  name: yakumo/publish
+- id: 827w1p
+  name: yakumo/run
