--- a/koishi.yml
+++ b/koishi.yml
@@ -7,6 +7,7 @@ plugins:
     ~server-satori:yofjv8: {}
     ~server-temp:tsnns5: {}
   group:basic:
+    $collapsed: true
     ~admin:kxttfi: {}
     ~bind:3ptkvt: {}
     commands:vg9gbn: {}
@@ -35,7 +36,7 @@ plugins:
     insight:l0m0q1: {}
     market:8cqyri:
       search:
-        endpoint: https://registry.koishi.chat/index.json
+        endpoint: https://koishi-registry.yumetsuki.moe/index.json
     notifier:rjzhp6: {}
     oobe:1hiptj: {}
     sandbox:1fztjz: {}
@@ -76,9 +77,11 @@ plugins:
     $if: env.NODE_ENV === 'development'
     hmr:t608n3:
       root: .
-  ~qq-estimate:c9shi3: {}
-  cmd-reaction:ccvuga:
-    bar: '123'
+  scold:t9yrua: {}
+  cmd-reaction:fa0bv9:
     commandList:
+      - 骂
       - help
+      - 夹子
+  voice-pkg:n1dg80: {}
 prefix: []
