--- a/yakumo.yml
+++ b/yakumo.yml
@@ -1,4 +1,5 @@
-- name: yakumo
+- id: ao48u2
+  name: yakumo
   config:
     pipeline:
       build:
@@ -7,6 +8,11 @@
         - client
       clean:
         - tsc --clean
-- name: yakumo-esbuild
-- name: yakumo-tsc
-- name: '@koishijs/client/lib'
+- id: 5vcrqr
+  name: yakumo-esbuild
+- id: 4zfnxp
+  name: yakumo-tsc
+- id: oicwp3
+  name: '@koishijs/client/lib'
+- id: lu13s4
+  name: yakumo/run
