--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "koishi-plugin-scold": "1.0.0",
     "koishi-plugin-telemetry": "^0.2.3",
     "koishi-plugin-theme-vanilla": "^1.1.0",
-    "koishi-plugin-voice-pkg": "1.0.1"
+    "koishi-plugin-video-pkg": "1.0.0",
+    "koishi-plugin-voice-pkg": "1.0.3"
   }
 }
