--- a/package.json
+++ b/package.json
@@ -89,9 +89,9 @@
     "koishi-plugin-dataview": "^2.6.1",
     "koishi-plugin-desktop": "^1.0.0",
     "koishi-plugin-puppeteer": "^3.9.0",
-    "koishi-plugin-qq-estimate": "0.1.1",
     "koishi-plugin-rate-limit": "^2.0.4",
     "koishi-plugin-telemetry": "^0.2.3",
-    "koishi-plugin-theme-vanilla": "^1.1.0"
+    "koishi-plugin-theme-vanilla": "^1.1.0",
+    "koishi-plugin-voice-pkg": "1.0.1"
   }
 }
