feat：发布 image-pkg V1.0

--- a/koishi.yml
+++ b/koishi.yml
@@ -84,6 +84,7 @@ plugins:
       - 骂
       - help
       - 夹子
-  voice-pkg:n1dg80: {}
-  video-pkg:xnvcot: {}
+  ~voice-pkg:n1dg80: {}
+  ~video-pkg:xnvcot: {}
+  image-pkg:z10ni3: {}
 prefix: []
